# WhatsAppChatAnalyser

./: .gitignore  Dockerfile  README.md  Untitled.ipynb  analyser.py  app.py  jenkins  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
api/: app.py
api/templates/: index.html
config/: data_validation.yml
constants/: __init__.py
data/: WhatsApp Chat with CSE AIML-2 Unofficial.txt
exception/: __init__.py
logger/: __init__.py
src/WhatsApp_Analyser/components/: DataAnalyser_component.py  DataIngestion_component.py  DataTransformation_config.py  DataValidation_compoent.py
src/WhatsApp_Analyser/constants/: __init__.py
src/WhatsApp_Analyser/data_access/: __init__.py
src/WhatsApp_Analyser/entity/: artifact_entity.py  config_entity.py
src/WhatsApp_Analyser/graphs/: builder.py
src/WhatsApp_Analyser/llm/: __init__.py
src/WhatsApp_Analyser/models/: chat_output_model.py  state_model.py
src/WhatsApp_Analyser/nodes/: chat_node.py
src/WhatsApp_Analyser/pipelines/: ai_pipeline.py  data_analyser_pipeline.py  data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py
src/WhatsApp_Analyser/prompts/: __init__.py
src/WhatsApp_Analyser/tests/: ai_test.py  data_analyser_pipeline_test.py  data_ingestion_pipeline_test.py  data_transformation_pipeline_test.py  data_validation_pipeline_test.py  final_test.py
src/WhatsApp_Analyser/tools/: CodeRunner_tool.py
src/WhatsApp_Analyser/utils/: abstract.py  main_utils.py
utils/: asyncHandler.py
