[project]
name = "whatsappchatanalyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "emoji>=2.15.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.28",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
    "wordcloud>=1.9.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
